--- a/design.css
+++ b/design.css
@@ -11,7 +11,7 @@ footer {
   text-align: center;
 }
 
-div.bar a {
+.bar a {
   color: white;
   margin: 3px;
   list-style-type: none;
@@ -22,7 +22,7 @@ div.bar a {
   font-style: normal;
 }
 
-div.bar {
+.bar {
   margin: 15px;
   text-align: center;
 }
@@ -49,8 +49,11 @@ p.copyright {
   font-style: normal;
 } 
 
-div.logo {
+.logo {
   text-align: center;
+}
+
+.logo img {
   cursor: pointer;
 }
 
@@ -82,16 +85,6 @@ section {
   size: 90%;
   margin: 10px;
 }
-
-.thumnail {
-  background-color: white; 
-  width: 250px; 
-  height: 250px;
-  cursor: pointer;
-  margin: 10px;
-  display:inline-block;
-}
-
 
 .title {
   margin: 1px;
@@ -153,9 +146,26 @@ main {
 
 .products {
   text-align: center;
+  position: relative;
 }
 
 .fill {
   width: auto;
   height: auto;
+}
+
+.tos a{
+  color: white;
+  font-family: "EB Garamond", serif;
+  font-optical-sizing: auto;
+  font-size: small;
+  text-decoration-line: underline;
+}
+
+.thumnail {
+  background-color: white; 
+  width: 250px;
+  height: 250px;
+  cursor: pointer;
+  margin: 10px;
 }
